test/fixtures/errors/if-error-has-good-stack.snapshot
node:assert:*
      throw newErr;
      ^

AssertionError [ERR_ASSERTION]: ifError got unwanted exception: test error
    at new AssertionError (node:internal*assert*assertion_error:*:*)
    at Assert.ifError (node:assert:*:*)
    at z (*if-error-has-good-stack.js:*:*)
    at y (*if-error-has-good-stack.js:*:*)
    at c (*if-error-has-good-stack.js:*:*)
    at b (*if-error-has-good-stack.js:*:*)
    at a (*if-error-has-good-stack.js:*:*)
    at Object.<anonymous> (*if-error-has-good-stack.js:*:*) {
  generatedMessage: false,
  code: 'ERR_ASSERTION',
  actual: Error: test error
      at c (*if-error-has-good-stack.js:*:*)
      at b (*if-error-has-good-stack.js:*:*)
      at a (*if-error-has-good-stack.js:*:*)
      at Object.<anonymous> (*if-error-has-good-stack.js:*:*),
  expected: null,
  operator: 'ifError',
  diff: 'simple'
}

Node.js *
